codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupted_turn_clears_visible_running_hook.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"before interrupt:\\n{before_interrupt}\\nafter interrupt:\\n{}\",\nhook_status_frame(&chat, 80))"
---
before interrupt:
"                                                                                "
"• Working (0s • esc to interrupt) · checking command policy                     "
"                                                                                "
"                                                                                "
"› Ask UnieAI Code to do anything                                                "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
after interrupt:
"                                                                                "
"                                                                                "
"  How was this?                                                                 "
"                                                                                "
"› 1. bug           Crash, error message, hang, or broken UI/behavior.           "
"  2. bad result    Output was off-target, incorrect, incomplete, or unhelpful.  "
"  3. good result   Helpful, correct, high‑quality, or delightful result worth   "
"                   celebrating.                                                 "
"  4. safety check  Benign usage blocked due to safety checks or refusals.       "
"  5. other         Slowness, feature suggestion, UX feedback, or anything       "
"                   else.                                                        "
"                                                                                "
"  Press enter to confirm or esc to go back                                      "
