codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3142
expression: popup
---
  Select Model and Effort
  Access legacy models by running unieai -m <model_name> or in your config.tom

› 1. test-visible-model (current)  test-visible-model description

  enter to set as default · s for this session · esc to go back
